# gedcom-parse

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  GNUmakefile.am  Makefile  Makefile.am  Makefile.in  Makefile.inc  NEWS  README  README.in  acconfig.h  acinclude.m4  config.h.in  configure.in  encoding.c  encoding.h  gedcom-config.in  gedcom.enc  gedcom.h  gedcom.lex  gedcom.y  gedcom_1byte.lex  gedcom_hilo.lex  gedcom_internal.h  gedcom_lex_common.c  gedcom_lohi.lex  interface.c  interface.h  meson.build  meson_options.txt  message.c  multilex.c  multilex.h  standalone.c  utf8-locale.c  utf8-locale.h
ansel/: ANSI_Z39.47.c  Makefile  Makefile.am  gconv-modules  skeleton.c
data/: Makefile.am  gedcom.enc  new.ged.in
debian/: README.debian  changelog  control  copyright  rules
doc/: Makefile.am  encoding.html  gom.html  index.html  index.html.in  interface.html  links.html  make_gom_xref  make_xref  parser.html  usage.html
doc/doxygen/: Makefile.am  doxygen.conf.in  index.doc  myfooter.html
doc/html/: Makefile.am  encoding.html  interface.html
doc/images/: Makefile.am
gedcom/: CMakeLists.txt  Makefile  Makefile.am  age.c  age.h  buffer.c  buffer.h  compat.c  compat.h  date.c  date.h  encoding.c  encoding.h  encoding_state.c  encoding_state.h  gedcom.y  gedcom_1byte.lex  gedcom_date.lex  gedcom_date.y  gedcom_hilo.lex  gedcom_internal.h  gedcom_lex_common.c  gedcom_lohi.lex  gedcom_tags.pl  hash.c  hash.h  interface.c  interface.h  meson.build  message.c  multilex.c  multilex.h  process_tags  tag_data.h  tag_names.pl  write.c  xref.c  xref.h
gedcom/calendar/: Makefile.am  dow.c  french.c  gregor.c  jewish.c  julian.c  sdncal.h
gom/: CMakeLists.txt  Makefile.am  address.c  address.h  association.c  association.h  change_date.c  change_date.h  event.c  event.h  family.c  family.h  family_link.c  family_link.h  func_template.h  gom.c  gom_internal.c  gom_internal.h  gom_modify.c  header.c  header.h  individual.c  individual.h  lds_event.c  lds_event.h  meson.build  multimedia.c  multimedia.h  multimedia_link.c  multimedia_link.h  note.c  note.h  note_sub.c  note_sub.h  personal_name.c  personal_name.h  place.c  place.h  repository.c  repository.h  (+16 more)
iconv/: ANSI_Z39.47-tables.h  Makefile.am
iconv/glibc/: ANSI_Z39.47.c  Makefile.am  loop.c
iconv/libiconv/: ChangeLog.gedcom  Makefile.am  Makefile.in.patch  NEWS.gedcom  README.patch  ansi_z39_47.h  config.charset.patch  configure.in.patch  configure.patch  converters.h.patch  encodings.def.patch  get_patches  iconv_open.3.html.patch  iconv_open.3.patch  patch_dist
include/: Makefile.am  gedcom.h  gedcom.h.in  gom.h
intl/: Makefile.in  config.charset
m4/: Makefile.am  gedcom.m4
po/: .cvsignore  ChangeLog  POTFILES.in  gedcom-parse.pot  nl.po
t/: .cvsignore  Makefile.am  allged.test  allged_gom.test  ansel.test  ansel_gom.test  anselconv.test  bogus.test  compat-easytree-2.test  compat-easytree.test  compat-famorig.test  compat-ftree.test  compat-lifelines.test  compat-paf.test  compat-paf2.test  compat-paf4.test  compat-paf5.test  dates.test  dates_gom.test  encoding_error.test  file_not_exist.test  gomtest.c  intl.test  line_nr.test  meson.build  minimal.test  path1.test  path2.test  set_testenv  standalone.c  test_ddd  test_gom  test_script  test_valgrind  uhlbomcl.test  uhlbomcl_gom.test  uhlcl.test  uhlcl_gom.test  ulhbomcl.test  ulhbomcl_gom.test  (+34 more)
t/input/: Makefile.am  anselutf8.ged  bogus.ged  compat-easytree-2.ged  compat-easytree.ged  compat-famorig.ged  compat-ftree.ged  compat-lifelines.ged  compat-paf.ged  compat-paf4.ged  dates.ged  encoding_error.ged  line_nr.ged  minimal.ged  unknown.ged
t/output/: Makefile.am  allged.ref  allged_gom.ref  ansel.ref  ansel_gom.ref  bogus.ref  compat-easytree-2.ref  compat-easytree.ref  compat-famorig.ref  compat-ftree.ref  compat-lifelines.ref  compat-paf.ref  compat-paf4.ref  compat-paf5.ref  dates.ref  dates_gom.ref  encoding_error.ref  file_not_exist.ref  line_nr.ref  minimal.ref  uhlbomcl.ref  uhlbomcl_gom.ref  uhlcl.ref  uhlcl_gom.ref  ulhbomcl.ref  ulhbomcl_gom.ref  ulhc.ref  ulhc_gom.ref  ulhcl.ref  ulhcl_gom.ref  ulhl.ref  ulhl_gom.ref  ulhlc.ref  ulhlc_gom.ref  unknown.ref  unknown_ignore_errors.ref  update_basic.ref  update_gom.ref  write_gom_allged.ged  write_gom_ansel.ged  (+29 more)
t/src/: Makefile.am  dump_gom.c  dump_gom.h  gom_write.c  gomtest.c  output.c  output.h  pathtest.c  portability.c  portability.h  standalone.c  test_bulk.sh  test_gom  test_intl  test_prologue.sh  test_script  test_update  test_updategom  test_writegom  testintl.c  update.c  update_gom.c
utf8/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.in  meson.build  utf8-convert.c  utf8-locale.c  utf8-locale.h  utf8.c  utf8.h  utf8tools.h
utf8/doc/: Makefile.am  utf8tools.html
utf8/libcharset/: Makefile.am  localcharset.c
