# Process this file with autoconf to produce a configure script.
# $Id$
# $Name$
AC_INIT(gedcom.enc)

dnl =============================================================
dnl Global variables
NAME=gedcom-parse
AC_SUBST(NAME)

VERSION=0.17
VERSION_MAJOR=`echo $VERSION | sed 's/\..*$//'`
changequote(<<,>>)
VERSION_MINOR=`echo $VERSION | sed 's/^[^\.]*\.//'`
changequote([,])
AC_SUBST(VERSION_MAJOR)
AC_SUBST(VERSION_MINOR)
AC_SUBST(VERSION)

LIBVERSION=0:7
AC_SUBST(LIBVERSION)

SHELL=/bin/sh
AC_SUBST(SHELL)

dnl =============================================================
AM_INIT_AUTOMAKE(${NAME},${VERSION})
AM_CONFIG_HEADER(config.h)
ALL_LINGUAS="nl"

AC_PROG_CC
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
if test "$YACC" = "bison -y"; then
  AC_MSG_WARN([We'll remove the -y option here])
  YACC=bison
else
  AC_MSG_ERROR([Sorry, bison is needed])
fi

AM_WITH_DMALLOC

dnl == Make statically linked test program for dmalloc tests
if test "$with_dmalloc" = "yes"; then
  EXTRA_PROGS=gomtest_static
fi
AC_SUBST(EXTRA_PROGS)

AM_GNU_GETTEXT

AC_OUTPUT(Makefile
	  gedcom/Makefile
	  gedcom/calendar/Makefile
	  gom/Makefile
	  ansel/Makefile
	  t/Makefile
	  t/input/Makefile
	  doc/Makefile
	  doc/images/Makefile
	  include/Makefile
	  include/gedcom.h
          intl/Makefile
          po/Makefile.in)
